<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.github.jeqo.poc</groupId>
  <artifactId>demo-cse</artifactId>
  <version>1.0-SNAPSHOT</version>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>15</java.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.apache.kafka</groupId>
      <artifactId>kafka-clients</artifactId>
      <version>2.5.0</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>1.7.30</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <release>${java.version}</release>
          <compilerArgs>--enable-preview</compilerArgs>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>producer</id>
      <build>
        <plugins>
          <plugin>
            <groupId>com.google.cloud.tools</groupId>
            <artifactId>jib-maven-plugin</artifactId>
            <version>2.5.2</version>
            <configuration>
              <from>
                <image>openjdk:${java.version}</image>
                <credHelper>desktop</credHelper>
              </from>
              <to>
                <image>jeqo/cse-demo-producer</image>
                <credHelper>desktop</credHelper>
              </to>
              <container>
                <jvmFlags>--enable-preview</jvmFlags>
                <mainClass>demo.producer.Main</mainClass>
              </container>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>consumer</id>
      <build>
        <plugins>
          <plugin>
            <groupId>com.google.cloud.tools</groupId>
            <artifactId>jib-maven-plugin</artifactId>
            <version>2.5.2</version>
            <configuration>
              <from>
                <image>openjdk:${java.version}</image>
                <credHelper>desktop</credHelper>
              </from>
              <to>
                <image>jeqo/cse-demo-consumer</image>
                <credHelper>desktop</credHelper>
              </to>
              <container>
                <jvmFlags>--enable-preview</jvmFlags>
                <mainClass>demo.producer.Main</mainClass>
              </container>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>